Datatypes in python/str (part-1  ).txt
		=========================================
				a) str (part-1  )
		=========================================
=>'str' is one of the defined class and treated as sequence data type.
=>The purpose of 'str' data type is to store String data and Character Data.
------------------
Examples:
------------------
>>> s1="Guido van Rossum"
>>> print(s1,type(s1))
Guido van Rossum <class 'str'>
>>> s2='R'
>>> print(s2,type(s2))
R <class 'str'>
>>> s3='Guido van Rossum'
>>> print(s3,type(s3))
Guido van Rossum <class 'str'>
>>> s4="R"
>>> print(s4,type(s4))
R <class 'str'>
>>> s5="""KVR"""
>>> print(s5,type(s5))
KVR <class 'str'>
>>> s6='''KVR'''
>>> print(s6,type(s6))
KVR <class 'str'>
----------------------------------------------------------------------------------
Organization of String Data:
----------------------------------------------
=>String data can be organized in two ways 
		a) Single Line String data
		b) Multi Line String data
-----------------------------------------
a) Single Line String data
-----------------------------------------
=>To organize Single Line String data, it must enclosed within double Quotes or single quotes and internally it is stored in single Quotes.
---------------
Syntax1:-
--------------
		" single line string data "

---------------
Syntax2:-
--------------
		' single line string data '
Examples:
------------------
>>> s1="Guido van Rossum"
>>> s1----------------------------'Guido van Rossum'
>>> s1='Guido van Rossum'
>>> s1-----------------------'Guido van Rossum'
>>> s2='R'
>>> print(s2,type(s2))---------------R <class 'str'>
>>> s3='Guido van Rossum'
>>> print(s3,type(s3))---------Guido van Rossum <class 'str'>
>>> s4="R"
>>> print(s4,type(s4))-----R <class 'str'>

Hence Single and double Quotes are always used for oraganizing Single line String data but  not used for  organizing multi Line String data.

>>>addr="Guido van Rossum
         ^
             SyntaxError: unterminated string literal (detected at line 1)
		(OR)
>>> addr='Guido van Rossum
	    addr='Guido van Rossum
		 ^
	SyntaxError: unterminated string literal (detected at line 1)		
------------------------------------------------------------------------------------------------------------
b) Multi Line String data
-----------------------------------------
=>To organize Multi Line String data, it must enclosed within tripple double Quotes or tripple single quotes and internally it is stored in tripple single Quotes.
---------------
Syntax1:-
--------------
		" " " string data1
			string data2
			--------------------
			string data-n  " " "


---------------
Syntax2:-
--------------
		' ' '  string data1
			string data2
			--------------------
			string data-n  ' ' ' 

------------------
Examples:
-----------------
>>> addr=" " "Guido van Rossum
... HNO:3-4, red sea side
... Python Software Foundation
... Nether Lands" " "
>>> print(addr, type(addr))
							Guido van Rossum
							HNO:3-4, red sea side
							Python Software Foundation
							Nether Lands <class 'str'>
>>> addr1=' ' 'James Gosling
... FNO:12-3, Floor Hills
... Sun Micro Sysyem
... USA' ' '
							>>> print(addr1, type(addr1))
							James Gosling
							FNO:12-3, Floor Hills
							Sun Micro Sysyem
							USA <class 'str'>

>>> s1="""Python Programming"""
>>> print(s1, type(s1))----------
Python Programming <class 'str'>
>>> s2='''Java Programming'''
>>> print(s2, type(s2))----Java Programming <class 'str'>
>>> en="Ab@3yWq9^$@WPr_-rY"
>>> print(en,type(en))-------------Ab@3yWq9^$@WPr_-rY <class 'str'>

=>Hence with Tripple double /single Quotes we can organize both single and multi line String data.
==============================X==============================